data/derived/sp14/progs/unify/prog3092.ml.out
Characters 59-60:
  | [a;b] -> 0;;
             ^
Error: This expression has type int but an expression was expected of type
         'a list
